force-app/main/default/objects/Integration_Mapping__c/Integration_Mapping__c.object-meta.xml
<CustomObject>
    <description>Centralized mapping table for QuickBooks Items, Classes, and Terms.</description>
    <label>Integration Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>