force-app/main/default/objects/Integration_Mapping__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The &apos;Description&apos; field from QBO. Primarily used for line item details in the Invoice Request payload.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>