force-app/main/default/objects/Integration_Mapping__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>The &apos;FullyQualifiedName&apos; from QBO. Represents the hierarchical path of the record (e.g., Parent:Child), essential for accurate Item matching.</description>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>