force-app/main/default/objects/Integration_Mapping__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>Primary External ID. Unique composite key formatted as &apos;{Category}_{QBO_ID}&apos;. Used to prevent ID collisions across QuickBooks entities (e.g., Items vs. Terms).</description>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>