force-app/main/default/objects/Integration_Mapping__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Synchronized &apos;Active&apos; status from QBO. Checked if the record is valid for use in current business transactions.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>