force-app/main/default/objects/Integration_Mapping__c/fields/QBO_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_ID__c</fullName>
    <description>The raw internal ID (Primary Key) assigned to this record within QuickBooks Online</description>
    <label>QBO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>